--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/urSQL.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.antlr-3.5.2-runtime.jar=antlr-3.5.2-runtime.jar
+file.reference.junit-4.12.jar=junit-4.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.antlr-3.5.2-runtime.jar}
+    ${file.reference.antlr-3.5.2-runtime.jar}:\
+    ${file.reference.junit-4.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
