Se elimina el package de la Biblioteca MapDB y se agrega el .jar de la misma, se agrega la biblioteca json.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,16 @@ dist.jar=${dist.dir}/urSQL.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.antlr-3.5.2-runtime.jar=antlr-3.5.2-runtime.jar
+file.reference.java-json.jar=/home/jaam/Documentos/java-json.jar
 file.reference.junit-4.12.jar=junit-4.12.jar
+file.reference.mapdb-2.0-beta7.jar=/home/jaam/Documentos/mapdb-2.0-beta7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.antlr-3.5.2-runtime.jar}:\
-    ${file.reference.junit-4.12.jar}
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.mapdb-2.0-beta7.jar}:\
+    ${file.reference.java-json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
