--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,9 +28,9 @@ dist.jar=${dist.dir}/urSQL.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.antlr-3.5.2-runtime.jar=antlr-3.5.2-runtime.jar
-file.reference.java-json.jar=/home/jaam/Documentos/java-json.jar
+file.reference.java-json.jar=java-json.jar
 file.reference.junit-4.12.jar=junit-4.12.jar
-file.reference.mapdb-2.0-beta7.jar=/home/jaam/Documentos/mapdb-2.0-beta7.jar
+file.reference.mapdb-2.0-beta7.jar=mapdb-2.0-beta7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
