Se agregan las clases correspondientes a urCLI del queryProcessor, y se agrega la biblioteca j-text-utils

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/urSQL.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.antlr-3.5.2-runtime.jar=antlr-3.5.2-runtime.jar
+file.reference.j-text-utils-0.3.3.jar=j-text-utils-0.3.3.jar
 file.reference.java-json.jar=java-json.jar
 file.reference.junit-4.12.jar=junit-4.12.jar
 file.reference.mapdb-2.0-beta7.jar=mapdb-2.0-beta7.jar
@@ -37,7 +38,8 @@ javac.classpath=\
     ${file.reference.antlr-3.5.2-runtime.jar}:\
     ${file.reference.junit-4.12.jar}:\
     ${file.reference.mapdb-2.0-beta7.jar}:\
-    ${file.reference.java-json.jar}
+    ${file.reference.java-json.jar}:\
+    ${file.reference.j-text-utils-0.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
