--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=urSQL
+application.vendor=macbook
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,12 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/urSQL.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.antlr-3.5.2-runtime.jar=antlr-3.5.2-runtime.jar
 file.reference.j-text-utils-0.3.3.jar=j-text-utils-0.3.3.jar
 file.reference.java-json.jar=java-json.jar
+file.reference.jdom-2.0.6.jar=jdom-2/jdom-2.0.6.jar
 file.reference.junit-4.12.jar=junit-4.12.jar
 file.reference.mapdb-2.0-beta7.jar=mapdb-2.0-beta7.jar
 includes=**
@@ -39,7 +42,8 @@ javac.classpath=\
     ${file.reference.junit-4.12.jar}:\
     ${file.reference.mapdb-2.0-beta7.jar}:\
     ${file.reference.java-json.jar}:\
-    ${file.reference.j-text-utils-0.3.3.jar}
+    ${file.reference.j-text-utils-0.3.3.jar}:\
+    ${file.reference.jdom-2.0.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
