--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.antlr-3.5.2-runtime.jar=antlr-3.5.2-runtime.jar
 file.reference.j-text-utils-0.3.3.jar=j-text-utils-0.3.3.jar
 file.reference.java-json.jar=java-json.jar
 file.reference.jdom-2.0.6.jar=jdom-2/jdom-2.0.6.jar
+file.reference.jdom-2.0.6.jar-1=jdom-2.0.6.jar
 file.reference.junit-4.12.jar=junit-4.12.jar
 file.reference.mapdb-2.0-beta7.jar=mapdb-2.0-beta7.jar
 includes=**
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.mapdb-2.0-beta7.jar}:\
     ${file.reference.java-json.jar}:\
     ${file.reference.j-text-utils-0.3.3.jar}:\
-    ${file.reference.jdom-2.0.6.jar}
+    ${file.reference.jdom-2.0.6.jar}:\
+    ${file.reference.jdom-2.0.6.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
